--- a/client/src/components/searchBar/styles.module.scss
+++ b/client/src/components/searchBar/styles.module.scss
@@ -9,6 +9,7 @@
 }
 
 .wrapper{
+    display: flex;
     position: relative;
 }
 
@@ -18,7 +19,10 @@
 }
 
 .wrapper_form_search_submit{
-    height: 2.1rem;
+    width: 1rem;
+    height: 2.3rem;
     padding-left: 1.5rem;
-    margin-left: -2.1rem;
+    margin-left: -2.2rem;
+    margin-top: 0rem;
+    position: absolute;
 }
