--- a/client/src/components/searchBar/styles.module.scss
+++ b/client/src/components/searchBar/styles.module.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     width: 100%;
     background-color: yellow;
-    padding: 1rem 0;
+    padding: 0.6rem 0;
     position: relative;
     margin-top: 0;
 }
@@ -13,16 +13,23 @@
     position: relative;
 }
 
+.wrapperLogo{
+    margin-right: 3rem;
+    margin-top: 0.1rem;
+}
+
 .wrapper_form_search_input{
-    width: 80rem;
-    height: 2rem;
+    width: 60rem;
+    height: 1.9rem;
 }
 
 .wrapper_form_search_submit{
-    width: 1rem;
-    height: 2.3rem;
+    width: 2.5rem;
+    height: 2rem;
     padding-left: 1.5rem;
-    margin-left: -2.2rem;
-    margin-top: 0rem;
+    margin-left: -2.55rem;
+    margin-top: 0.12rem;
     position: absolute;
+    border: none;
+    cursor: pointer;
 }
