--- a/client/src/components/items/styles.module.scss
+++ b/client/src/components/items/styles.module.scss
@@ -36,7 +36,7 @@
 .itemPriceTitle{
     flex-direction: column;
     align-items: flex-start;
-    width: 600px;
+    width: 100%;
     height: 100px;
     margin-top: 3rem;
     margin-left: 1rem;
@@ -44,8 +44,9 @@
 
 .itemTitle{
     display: flex;
-    padding: auto;
-    width: 600px;
+    justify-content: left;
+    align-items:flex-start;
+    width:590px;
 }
 
 .itemPrice{
@@ -57,5 +58,4 @@
     width: 330px;
     height: 30px;
     margin-top: 3.5rem;
-    margin-right: 100px;
 }
