--- a/client/src/components/items/styles.module.scss
+++ b/client/src/components/items/styles.module.scss
@@ -1,6 +1,7 @@
 .container{
     display: flex;
     justify-content: center;
+    position:relative;
 }
 
 .card{
@@ -17,6 +18,7 @@
     width: 71.6rem;
     margin-top: 4rem;
     padding: 1rem;
+    margin-left: 1rem;
 }
 
 .items{
@@ -34,23 +36,33 @@
 }
 
 .itemPriceTitle{
+    display: flex;
     flex-direction: column;
+    justify-content: left;
     align-items: flex-start;
     width: 100%;
-    height: 100px;
+    height: auto;
     margin-top: 3rem;
     margin-left: 1rem;
 }
 
-.itemTitle{
-    display: flex;
-    justify-content: left;
-    align-items:flex-start;
-    width:590px;
-}
 
 .itemPrice{
-    display: flex
+    display: flex;
+    justify-content:left;
+    align-items:flex-start;
+    font-weight:500;
+    font-size: 30px;
+}
+
+.itemTitle{
+    display: flex; 
+    text-align: left;
+    letter-spacing: normal;
+    margin-top: 1.5rem;
+    width:440px;
+    font-size: 25px;
+    font-weight:350;
 }
 
 .itemState{
@@ -58,4 +70,10 @@
     width: 330px;
     height: 30px;
     margin-top: 3.5rem;
+    font-weight: 200;
+}
+
+.load{
+    margin-left: 5rem;
+    margin-top: 15rem;
 }
