--- a/client/src/components/searchBar/styles.module.scss
+++ b/client/src/components/searchBar/styles.module.scss
@@ -1,16 +1,17 @@
 .container{
     display: flex;
     justify-content: center;
-    width: 100%;
+    align-items: center;
     background-color: yellow;
-    padding: 0.6rem 0;
     position: relative;
+    padding: 0.6rem 0;
     margin-top: 0;
+    left:0;
+    width: 100%;
 }
 
 .wrapper{
     display: flex;
-    position: relative;
 }
 
 .wrapperLogo{
