add detailItems && enhacenmet router & add reducers store

--- a/client/src/components/items/styles.module.scss
+++ b/client/src/components/items/styles.module.scss
@@ -15,7 +15,7 @@
     background: #ffffff;
     border:none;
     margin-bottom: 5rem;
-    width: 71.6rem;
+    width: 61.15rem;
     margin-top: 4rem;
     padding: 1rem;
     margin-left: 1rem;
@@ -31,8 +31,11 @@
 .item{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    
+    justify-content: space-between;    
+}
+
+.itemImg{
+    cursor: pointer;
 }
 
 .itemPriceTitle{
@@ -44,6 +47,7 @@
     height: auto;
     margin-top: 3rem;
     margin-left: 1rem;
+    cursor: pointer;
 }
 
 
@@ -52,7 +56,7 @@
     justify-content:left;
     align-items:flex-start;
     font-weight:500;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .itemTitle{
@@ -61,12 +65,13 @@
     letter-spacing: normal;
     margin-top: 1.5rem;
     width:440px;
-    font-size: 25px;
+    font-size: 22.5px;
     font-weight:350;
 }
 
 .itemState{
     display: flex;
+    margin-left: 5rem;
     width: 330px;
     height: 30px;
     margin-top: 3.5rem;
@@ -76,4 +81,39 @@
 .load{
     margin-left: 5rem;
     margin-top: 15rem;
+}
+
+.containerBad{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: 150px;
+}
+
+.descriptionBad{
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+    margin-right: 4rem;
+}
+
+.containerImgSearchBad{
+    margin-top: 2rem;
+}
+
+.containerUlBad{
+    display: flex;
+    justify-content: left;
+    align-items:flex-start;
+    text-align: left;
+    margin-right: 11rem;
+}
+
+.titleBad{
+    font-size: 25px;
+    font-weight: 600;
+}
+
+li{
+    margin-top: 5px;
 }
