--- a/client/src/components/searchBar/styles.module.scss
+++ b/client/src/components/searchBar/styles.module.scss
@@ -20,13 +20,15 @@
 }
 
 .wrapper_form_search_input{
-    width: 60rem;
+    width: 50rem;
     height: 1.9rem;
+    margin-top: 0.05rem;
+    font-size: 16px;
 }
 
 .wrapper_form_search_submit{
     width: 2.5rem;
-    height: 2rem;
+    height: 2.1rem;
     padding-left: 1.5rem;
     margin-left: -2.55rem;
     margin-top: 0.12rem;
