enhacenment styles cards

--- a/client/src/components/items/styles.module.scss
+++ b/client/src/components/items/styles.module.scss
@@ -15,7 +15,7 @@
     background: #ffffff;
     border:none;
     margin-bottom: 5rem;
-    width: 61.3rem;
+    width: 70rem;
     margin-top: 4rem;
     padding: 1rem;
     margin-left: 1rem;
@@ -71,10 +71,11 @@
 
 .itemState{
     display: flex;
-    margin-left: 5rem;
+    // margin-left: 12rem;
+    padding: 0rem 0.5rem 0rem 14rem;
     width: 330px;
     height: 30px;
-    margin-top: 3.5rem;
+    margin-top: 4.5rem;
     font-weight: 200;
 }
 
