--- a/client/src/components/items/components/itemDetail/styles.module.scss
+++ b/client/src/components/items/components/itemDetail/styles.module.scss
@@ -15,7 +15,7 @@
     background: #ffffff;
     border:none;
     margin-bottom: 5rem;
-    width: 61.3rem;
+    width: 70rem;
     margin-top: 4rem;
     padding: 1rem;
     margin-left: 1rem;
@@ -25,8 +25,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 1rem;
-    // margin-left: 4rem;
+    padding: 2rem;
 }
 
 .productPrice{
@@ -101,8 +100,8 @@
     font-size: 20px;
     justify-content: center;
     align-items: center;
-    text-align: justify;
-    width: 63%;
+    text-align:start;
+    width: 68.5%;
 }
 
 .load{
