--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F1F1F1;
+  overflow-x: hidden;
+  width:100vw;
 }
 
 code {
