--- a/client/src/components/items/components/itemsSearch/styles.module.scss
+++ b/client/src/components/items/components/itemsSearch/styles.module.scss
@@ -13,7 +13,7 @@
     justify-content: center;
     box-sizing: border-box;
     height: auto;
-    background: #ffffff;
+    background: #FFFFFF;
     border:none;
     margin-bottom: 5rem;
     width: 70rem;
