--- a/client/src/components/searchBar/styles.module.scss
+++ b/client/src/components/searchBar/styles.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: yellow;
+    background-color: #FFF000;
     position: fixed;
     padding: 0.6rem 0;
     margin-top: 0;
