--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F1F1F1;
+  background-color: #E2E2E2;
   overflow-x: hidden;
   width:100vw;
 }
