--- a/client/src/components/items/components/itemsSearch/styles.module.scss
+++ b/client/src/components/items/components/itemsSearch/styles.module.scss
@@ -65,7 +65,7 @@
     letter-spacing: normal;
     margin-top: 1.5rem;
     width:440px;
-    font-size: 22.5px;
+    font-size: 21px;
     font-weight:400;
 }
 
@@ -81,6 +81,11 @@
 .load{
     margin-left: 5rem;
     margin-top: 15rem;
+}
+
+.loadBack{
+    margin-left: 15rem;
+    margin-top: 10rem;
 }
 
 
