--- a/client/src/components/items/components/itemDetail/styles.module.scss
+++ b/client/src/components/items/components/itemDetail/styles.module.scss
@@ -1,9 +1,11 @@
 .container{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     position:static;
     text-align: center;
-    margin-top: 8rem;
+    margin-top: 5rem;
 }
 
 .card{
