--- a/client/src/components/items/components/itemsSearch/styles.module.scss
+++ b/client/src/components/items/components/itemsSearch/styles.module.scss
@@ -1,8 +1,11 @@
 .container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     position:static;
-    margin-top: 8rem;
+    margin-top: 5rem;
+
 }
 
 .card{
